# resonance

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  REFACTOR_PLAN.md  REFACTOR_TODO.md  ba.conf  melody-generation-research.md  todo.md  ux-guidelines.md
experiments/svs-poc/: .gitignore  Cargo.toml  NOTES.md  README.md
experiments/svs-poc/fixtures/: hello_tiger.ds  twinkle.ds
experiments/svs-poc/scripts/: download_models.sh
experiments/svs-poc/src/: config.rs  ds.rs  lib.rs  main.rs  pipeline.rs
experiments/svs-poc/tests/: smoke.rs
plugins/resonance-amp/: Cargo.toml  bundler.toml
plugins/resonance-amp/src/: editor.rs  lib.rs  loader.rs  main.rs  params.rs  tuner.rs  ui.rs  viz.rs
plugins/resonance-amp/tests/: nam_parse.rs  tuner.rs  tuner_view.rs
plugins/resonance-compressor/: Cargo.toml
plugins/resonance-compressor/presets/: bass_glue.json  (+9 more)
plugins/resonance-delay/: Cargo.toml  bundler.toml
plugins/resonance-drums/: Cargo.toml  bundler.toml
plugins/resonance-eq/: Cargo.toml
plugins/resonance-ir/: Cargo.toml  bundler.toml
plugins/resonance-mastering/: Cargo.toml
plugins/resonance-reverb/: Cargo.toml  bundler.toml
plugins/resonance-wavetable/: Cargo.toml  build.rs
resonance-app/: Cargo.toml
resonance-app/src/: chord_box.rs  chord_sheet_pdf.rs  chord_track.rs  commands.rs  demo.rs  engine_events.rs  focus.rs  lib.rs  main.rs  message.rs  midi_editor.rs  piano_roll.rs  presets.rs  project.rs  recent.rs  settings.rs  state.rs  test_support.rs  theme.rs  timeline.rs  timeline_draw.rs  timeline_input.rs  timeline_snap.rs  undo.rs  update.rs  util.rs
resonance-app/tests/: arrangement_marker_reducers.rs  autosave_settings.rs  autosave_write.rs  aux_send_handlers.rs  aux_send_mirror.rs  browser_handlers.rs  builtin_templates.rs  chord_box_layout.rs  chord_generator_modes.rs  chord_schema_inspector.rs  chord_track.rs  chord_track_messages.rs  clip_fade_gain_draw.rs  clip_fade_gain_handlers.rs  clip_fade_gain_hit_test.rs  clip_fade_gain_mirror.rs  clip_fade_gain_persistence.rs  clip_fade_gain_snapshot.rs  clip_inspector_flyout.rs  commands_registry.rs  compose_drum_arrangement.rs  compose_drum_arrangement_edit.rs  compose_drum_pattern_picker.rs  compose_pinned_chords.rs  compose_rail_collapse.rs  compose_track_count.rs  compose_vocal_placeholder.rs  compose_workspace_collapse.rs  drag_placement_handlers.rs  drag_placement_visuals.rs  drum_kit_pads.rs  export_dialog_shell.rs  expression_curves_model.rs  external_instrument_persistence.rs  external_instrument_state.rs  freeze_handlers.rs  frost_treatment_swatch.rs  generator_section.rs  global_tracks_edit_cycle.rs  global_tracks_shelf.rs  (+64 more)
resonance-audio/: Cargo.toml
resonance-audio/src/: clap_host.rs  decode.rs  engine.rs  input_handle.rs  input_pipewire.rs  latency.rs  lib.rs  limits.rs  midi_clock.rs  midi_hardware.rs  midi_io.rs  mixer.rs  platform.rs  prefault.rs  recording.rs  stream_errors.rs  types.rs
resonance-audio/tests/: audition_preview.rs  automation_handlers.rs  aux_send_cycle.rs  aux_send_model.rs  aux_send_render.rs  bounce_midi_events.rs  bounce_plugin_lock.rs  bounce_render_range_tempo.rs  bounce_transport_guard.rs  clap_all_notes_off.rs  clap_plugin_drop_order.rs  clip_fade_gain_handlers.rs  clip_fade_gain_render.rs  clip_pitch_analysis.rs  clip_tempo_detect.rs  clip_warp.rs  clip_warp_handlers.rs  control_surface_parse.rs  decode.rs  engine_send_disconnected.rs  export_encoders.rs  export_normalize.rs  export_settings.rs  external_instrument_handlers.rs  external_instrument_ping.rs  fade_curve.rs  freeze_command_plumbing.rs  freeze_render_core.rs  import_audio_to_pool.rs  latency_comp.rs  live_arrival_offset.rs  live_note_retry_order.rs  load_clip_offthread.rs  load_wav_rate_mismatch.rs  loop_record_takes.rs  midi_bulk_edits.rs  midi_clip_handlers.rs  midi_clock_parse.rs  midi_export_project.rs  midi_hardware_parse.rs  (+24 more)
resonance-common/: Cargo.toml
resonance-common/src/: audio_probe.rs  automation.rs  denormal.rs  drum_map.rs  external_instrument.rs  freeze.rs  group_identity.rs  lib.rs  midi_map.rs  registry.rs  scan.rs  take.rs  track_group.rs  wav.rs
resonance-common/tests/: audio_probe.rs  automation.rs  drum_map.rs  freeze.rs  group_identity.rs  midi_map.rs  registry.rs  streaming_resample.rs  take.rs  wav.rs
resonance-music-theory/: Cargo.toml
resonance-music-theory/data/: LICENSE-CMUDICT
resonance-music-theory/src/: chord.rs  derive.rs  fretboard.rs  g2p.rs  lib.rs  pitch.rs  progression.rs  rng.rs  satb.rs  scale.rs  voicing.rs
resonance-music-theory/tests/: bass_motif.rs  cadence_formulas.rs  chord.rs  chord_parse.rs  composed_transforms.rs  derive_basics.rs  embellishment.rs  fretboard.rs  g2p.rs  g2p_apis.rs  generator.rs  inversions.rs  leap_recovery.rs  manual_motif.rs  manual_motif_toggle.rs  motif_descending_bias.rs  motif_line_rules.rs  motif_rhythm.rs  pentatonic_generator.rs  phrase_climax.rs  phrase_forms.rs  phrase_overlay.rs  phrase_sequences.rs  pitch.rs  progression.rs  rhythm_transforms.rs  satb.rs  scale.rs  scale_snap.rs  schema_generator.rs  section_climax.rs  tooltip_claims.rs  vocal.rs  vocal_climax.rs  vocal_enum_labels.rs  vocal_params_validate.rs  vocal_syncopation.rs  voicing.rs
resonance-plugin/: Cargo.toml
resonance-plugin/src/: clap_bridge.rs  editor_widgets.rs  formatters.rs  gui.rs  lib.rs  loader.rs  param.rs  plugin.rs  presets.rs  range.rs  smoother.rs  state.rs  ui.rs
resonance-plugin/tests/: sidechain.rs
resonance-svs/: Cargo.toml  NOTES.md  README.md
resonance-svs/examples/: render_resonance_vocal.rs
resonance-svs/fixtures/: silent_rain.ds
resonance-svs/scripts/: download_models.sh  make_silent_rain.py
resonance-svs/src/: audio.rs  config.rs  ds.rs  lib.rs  main.rs  pipeline.rs  voicebank.rs
resonance-svs/tests/: mix_timeline.rs  smoke.rs  voicebank_manifest.rs
wayland-plugin-gui/: Cargo.toml
wayland-plugin-gui/examples/: hello.rs
wayland-plugin-gui/src/: app.rs  editor.rs  egl_context.rs  error.rs  input.rs  lib.rs  theme.rs  widgets.rs  window_thread.rs
wayland-plugin-gui/tests/: csd_close.rs
(+941 files in other folders)
