[workspace]
members = ["resonance-audio", "resonance-app", "resonance-common", "resonance-dsp", "resonance-music-theory", "resonance-plugin", "wayland-plugin-gui", "plugins/resonance-drums", "plugins/resonance-amp", "plugins/resonance-ir", "plugins/resonance-reverb", "plugins/resonance-wavetable"]
resolver = "2"

[workspace.dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-plugin", "audio-ports", "params", "state", "note-ports", "latency", "gui"
] }

[profile.release]
lto = "thin"
