[workspace]
members = ["resonance-audio", "resonance-app", "resonance-common", "resonance-dsp", "resonance-metering", "resonance-music-theory", "resonance-plugin", "wayland-plugin-gui", "plugins/resonance-delay", "plugins/resonance-drums", "plugins/resonance-amp", "plugins/resonance-compressor", "plugins/resonance-eq", "plugins/resonance-ir", "plugins/resonance-mastering", "plugins/resonance-reverb", "plugins/resonance-wavetable", "experiments/svs-poc"]
resolver = "2"

[workspace.dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-plugin", "audio-ports", "params", "state", "note-ports", "latency", "gui"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
egui = { version = "0.34", features = ["default_fonts"], default-features = false }
rfd = "0.15"
rustfft = "6"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "flac", "mp3", "ogg", "vorbis", "aac", "isomp4"] }
dirs = "5"
bytemuck = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
arc-swap = "1"
midir = "0.10"

[profile.release]
lto = "thin"
