[package]
name = "resonance-app"
version = "0.1.0"
edition = "2021"

[dependencies]
resonance-audio = { path = "../resonance-audio" }
resonance-music-theory = { path = "../resonance-music-theory" }
resonance-plugin = { path = "../resonance-plugin", features = ["ui"] }
iced = { version = "0.13", features = ["canvas", "wgpu", "tokio"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "4"
bytemuck = { version = "1", features = ["derive"] }
printpdf = "0.9"
