[package]
name = "resonance-app"
version = "0.1.0"
edition = "2021"

[dependencies]
resonance-audio = { path = "../resonance-audio" }
resonance-music-theory = { path = "../resonance-music-theory" }
resonance-plugin = { path = "../resonance-plugin", features = ["ui"] }
iced = { version = "0.13", features = ["canvas", "wgpu", "tokio", "lazy"] }
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
bytemuck.workspace = true
printpdf = "0.9"
