[package]
name = "resonance-app"
version = "0.1.0"
edition = "2021"

[dependencies]
resonance-audio = { path = "../resonance-audio" }
resonance-common = { path = "../resonance-common" }
resonance-music-theory = { path = "../resonance-music-theory" }
resonance-plugin = { path = "../resonance-plugin", features = ["ui"] }
resonance-svs = { path = "../resonance-svs" }
iced = { workspace = true, features = ["canvas", "wgpu", "tokio", "lazy", "advanced"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
bytemuck.workspace = true
printpdf = "0.9"

[dev-dependencies]
iced_test = "0.14"
tempfile = "3"
