[package]
name = "resonance-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
symphonia.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
ringbuf = "0.4"
clap-sys = "0.5"
libloading = "0.8"
indexmap = "2"
resonance-common = { path = "../resonance-common" }
resonance-dsp = { path = "../resonance-dsp" }
hound = "3.5"
midly = "0.5"
memmap2 = "0.9"
bytemuck.workspace = true
serde.workspace = true
