[package]
name = "resonance-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.17"
symphonia.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
ringbuf = "0.5"
clap-sys = "0.5"
libloading = "0.8"
indexmap = "2"
resonance-common = { path = "../resonance-common" }
resonance-dsp = { path = "../resonance-dsp" }
hound.workspace = true
midly = "0.5"
midir.workspace = true
arc-swap.workspace = true
memmap2 = "0.9"
bytemuck.workspace = true
serde.workspace = true

[dev-dependencies]
# Used by tests/import_audio_to_pool.rs to author mono / multi-rate
# source WAVs (the public `transcode_to_wav` only writes stereo).
hound.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = "0.3"
pipewire = { version = "0.9", features = ["v0_3_44"] }
