[package]
name = "resonance-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.17"
symphonia.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
ringbuf = "0.5"
clap-sys = "0.5"
libloading = "0.8"
indexmap = "2"
resonance-common = { path = "../resonance-common" }
resonance-dsp = { path = "../resonance-dsp" }
# Loudness measurement (integrated LUFS + 4× oversampled true peak) and the
# polyphase true-peak detector reused by the export normalization pass.
resonance-metering = { path = "../resonance-metering" }
hound.workspace = true
midly = "0.5"
midir.workspace = true
arc-swap.workspace = true
memmap2 = "0.9"
bytemuck.workspace = true
serde.workspace = true
flacenc = { version = "0.5.1", default-features = false, features = ["par"] }
rubato = "0.16"
# MP3 export (libmp3lame, built from bundled C source — no system lib).
# Gated behind the `mp3` feature so a build without a C toolchain can opt
# out and degrade to ExportErrorKind::EncoderUnavailable (todo #653).
mp3lame-encoder = { version = "0.2", optional = true }

[features]
# MP3 encoder sink. On by default so exports offer MP3 out of the box;
# build with `--no-default-features` (or a profile that drops it) when a
# C toolchain / libmp3lame source build is unavailable.
default = ["mp3"]
mp3 = ["dep:mp3lame-encoder"]

[dev-dependencies]
# Used by tests/import_audio_to_pool.rs to author mono / multi-rate
# source WAVs (the public `transcode_to_wav` only writes stereo).
hound.workspace = true
# Used by tests/export_settings.rs for ExportSettings serde round-trips.
serde_json.workspace = true
# Used by tests/export_normalize.rs to measure the rendered output's
# integrated LUFS / true peak independently of the export pipeline.
resonance-metering = { path = "../resonance-metering" }

[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = "0.3"
pipewire = { version = "0.9", features = ["v0_3_44"] }
