[package]
name = "resonance-music-theory"
version = "0.1.0"
edition = "2021"
description = "Music theory primitives (pitch, chord, scale) for Resonance"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde.workspace = true
thiserror = "2"

[dev-dependencies]
serde_json.workspace = true
