[package]
name = "resonance-music-theory"
version = "0.1.0"
edition = "2021"
description = "Music theory primitives (pitch, chord, scale) for Resonance"

[dependencies]
cmudict-fast = "0.8.0"
phf = { version = "0.11", features = ["macros"] }
rand = { workspace = true, default-features = false, features = ["small_rng"] }
serde.workspace = true
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
