[package]
name = "resonance-plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
ui = ["iced"]
# egui widget helpers bound to this crate's param types, for plugin editors
# built on `wayland-plugin-gui`. Off by default so DSP-only consumers stay lean.
editor-widgets = ["dep:wayland-plugin-gui"]

[dependencies]
clack-plugin = { workspace = true }
clack-extensions = { workspace = true }
resonance-common = { path = "../resonance-common" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
iced = { workspace = true, optional = true }
wayland-plugin-gui = { path = "../wayland-plugin-gui", optional = true }
