[package]
name = "resonance-amp"
version = "0.1.0"
edition = "2021"
description = "A guitar amp simulator CLAP plugin using Neural Amp Modeler models"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# The editor is enabled by default so the bundled .clap ships with a GUI.
# Turn it off (`--no-default-features`) for headless builds.
default = ["editor"]
editor = [
    "dep:wayland-plugin-gui",
    "resonance-plugin/editor-widgets",
    "dep:egui",
    "dep:rfd",
    "dep:ureq",
    "dep:tiny_http",
    "dep:sha2",
    "dep:base64",
    "dep:rand",
    "dep:dirs",
    "dep:webbrowser",
]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

# Editor dependencies — only pulled in when the `editor` feature is on.
wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }

# Tone3000 browser — all optional and gated behind the `editor` feature
# so headless builds stay lean.
ureq = { version = "3", features = ["json"], optional = true }
tiny_http = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
webbrowser = { version = "1", optional = true }
