[package]
name = "resonance-delay"
version = "0.1.0"
edition = "2021"
description = "A tempo-synced stereo delay with digital and analog modes"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["editor"]
editor = ["dep:wayland-plugin-gui", "dep:egui"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
parking_lot = "0.12"
serde_json = "1"

wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { version = "0.34", features = ["default_fonts"], default-features = false, optional = true }
