[package]
name = "resonance-delay"
version = "0.1.0"
edition = "2021"
description = "A tempo-synced stereo delay with digital and analog modes"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["editor"]
editor = ["dep:wayland-plugin-gui", "dep:egui"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
parking_lot.workspace = true
serde_json.workspace = true

wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { workspace = true, optional = true }
