[package]
name = "resonance-drums"
version = "0.1.0"
edition = "2021"
description = "A drum sampler instrument CLAP plugin for the Resonance DAW"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# The editor is enabled by default so the bundled .clap ships with a GUI.
# Turn it off (`--no-default-features`) for headless builds.
default = ["editor"]
editor = ["dep:wayland-plugin-gui", "dep:egui", "dep:rfd"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

# Editor dependencies — only pulled in when the `editor` feature is on.
wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { version = "0.34", features = ["default_fonts"], default-features = false, optional = true }
rfd = { version = "0.15", optional = true }
