[package]
name = "resonance-drums"
version = "0.1.0"
edition = "2021"
description = "A drum sampler instrument CLAP plugin for the Resonance DAW"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# The editor is enabled by default so the bundled .clap ships with a GUI.
# Turn it off (`--no-default-features`) for headless builds.
default = ["editor"]
editor = [
    "dep:wayland-plugin-gui",
    "dep:egui",
    "dep:rfd",
    "dep:ureq",
    "dep:zip",
    "dep:dirs",
]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }

serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true

# Editor dependencies — only pulled in when the `editor` feature is on.
wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }

# Drumkit download — gated behind the `editor` feature so headless builds
# stay lean.
ureq = { version = "2.10", features = ["json"], optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
dirs = { workspace = true, optional = true }
