[package]
name = "resonance-eq"
version = "0.1.0"
edition = "2021"
description = "An 8-band parametric EQ CLAP plugin in the spirit of FabFilter Pro-Q 3"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# Editor shipped by default so the cdylib bundle has a GUI.
# Turn it off (`--no-default-features`) for a headless DSP build.
default = ["editor"]
editor = ["dep:wayland-plugin-gui", "dep:egui"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
serde_json.workspace = true
rustfft.workspace = true
parking_lot.workspace = true

wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { workspace = true, optional = true }
