[package]
name = "resonance-ir"
version = "0.1.0"
edition = "2021"
description = "An impulse response convolution CLAP plugin for cab and room emulation"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
parking_lot = "0.12"
atomic_float = "1"
hound = "3.5"
rustfft = "6"
