[package]
name = "resonance-ir"
version = "0.1.0"
edition = "2021"
description = "An impulse response convolution CLAP plugin for cab and room emulation"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
ui = ["resonance-plugin/ui"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
parking_lot = "0.12"
rustfft = "6"
serde_json = "1"
