[package]
name = "resonance-ir"
version = "0.1.0"
edition = "2021"
description = "An impulse response convolution CLAP plugin for cab and room emulation"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# The editor is enabled by default so the bundled .clap ships with a GUI.
# Turn it off (`--no-default-features`) for headless builds.
default = ["editor"]
editor = ["dep:wayland-plugin-gui", "dep:egui", "dep:rfd", "resonance-plugin/editor-widgets"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
parking_lot.workspace = true
rustfft.workspace = true
serde_json.workspace = true

# Editor dependencies — only pulled in when the `editor` feature is on.
wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }
