[package]
name = "resonance-mastering"
version = "0.1.0"
edition = "2021"
description = "Automatic mastering plugin for band music — analyzer + linear-phase chain"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["editor"]
editor = ["dep:wayland-plugin-gui", "dep:egui", "resonance-plugin/editor-widgets"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
resonance-metering = { path = "../../resonance-metering" }
arc-swap.workspace = true
parking_lot.workspace = true
rustfft.workspace = true
serde_json.workspace = true
symphonia.workspace = true

wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { workspace = true, optional = true }
