[package]
name = "resonance-reverb"
version = "0.1.0"
edition = "2021"
description = "An algorithmic reverb CLAP plugin using diffusion networks and FDN"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
