[package]
name = "resonance-reverb"
version = "0.1.0"
edition = "2021"
description = "An algorithmic reverb CLAP plugin using diffusion networks and FDN"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["editor"]
editor = ["dep:wayland-plugin-gui", "dep:egui"]

[dependencies]
resonance-plugin = { path = "../../resonance-plugin" }
resonance-common = { path = "../../resonance-common" }
resonance-dsp = { path = "../../resonance-dsp" }
serde_json.workspace = true

wayland-plugin-gui = { path = "../../wayland-plugin-gui", optional = true }
egui = { workspace = true, optional = true }
